rewrite URLUtil